# xonfig

./: .gitignore  .gitmodules  pyproject.toml  rc.py  readme.md
configs/: abbrevs.py  aliases.py  variables.py
user_xsh/: bakery.py  config_loader.py  utils.py
user_xsh/completers/: carapace.py  django_py_manage.py  history_completer.py
user_xsh/executor/: proc.py  proc_test.py
user_xsh/history/: importer.py
user_xsh/key_bindings/: bindings.py  filters.py
user_xsh/tb_hooks/: commonlib.py  hook_better_exceptions.py  rich_exceptions.py
user_xsh/xaliases/: cleanup.py  docker.py  misc.py
